examples/errors/part2_semantic1_names_and_symbols_invalid.lya
a = 3;   // Error. ’a’ is not defined.
dcl a int;